--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,7 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #4eb980;
+  color: #957ea6;
   text-decoration: none; }
   a:hover {
     border-bottom-color: transparent; }
@@ -1173,7 +1173,7 @@ textarea {
   select:focus,
   textarea:focus {
     background: rgba(224, 224, 224, 0.15);
-    border-color: #4eb980; }
+    border-color: #957ea6; }
 
 input[type="text"],
 input[type="password"],
@@ -1622,7 +1622,7 @@ input[type="button"],
     color: rgba(255, 255, 255, 0.8); }
     #header a:hover {
       border-bottom-color: transparent;
-      color: #4eb980; }
+      color: #957ea6; }
   #header strong, #header b {
     color: #ffffff; }
   #header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
@@ -1634,7 +1634,7 @@ input[type="button"],
     background: #ffffff;
     color: #544d55; }
   #header .logo {
-    background: #4eb980;
+    background: #957ea6;
     border-radius: 100%;
     color: #ffffff;
     cursor: default;
@@ -1659,7 +1659,7 @@ input[type="button"],
 /* Footer */
 #footer {
   background-attachment: scroll;
-  background-color: #4eb980;
+  background-color: #957ea6;
   background-image: url("images/bottom-3200.svg");
   background-position: top center;
   background-repeat: repeat-x;
@@ -1697,7 +1697,7 @@ input[type="button"],
   #footer .button {
     background: #ffffff;
     box-shadow: inset 0 0 0 1px #ffffff;
-    color: #4eb980; }
+    color: #957ea6; }
     #footer input[type="submit"]:hover,
     #footer input[type="reset"]:hover,
     #footer input[type="button"]:hover,
