removed vertical line

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -108,7 +108,7 @@ em, i {
   font-style: italic; }
 
 p, ul, ol, dl, table, blockquote, form {
-  margin: 0 0 2em 0; }
+  margin: 0 0 1em 0; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #5b5b5b;
@@ -123,7 +123,9 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none; }
 
 h2 {
-  font-size: 1.75em; }
+  font-size: 1.75em;
+  margin-top: 1em;
+}
 
 h3 {
   font-size: 1.5em; }
@@ -1603,13 +1605,13 @@ input[type="button"],
   padding: 10em 0 20em 0;
   position: relative;
   text-align: center; }
-  #header:before, #header:after {
+  /* #header:before, #header:after {
     background: rgba(224, 224, 224, 0.75);
     content: '';
     left: 50%;
     position: absolute;
     width: 1px;
-    z-index: 0; }
+    z-index: 0; } */
   #header:before {
     height: calc(100% - 50px);
     opacity: 0.15;
@@ -1674,7 +1676,7 @@ input[type="button"],
   padding: calc(460px + 6em) 0 10em 0;
   position: relative;
   text-align: center; }
-  #footer:before {
+  /* #footer:before {
     background: rgba(224, 224, 224, 0.75);
     content: '';
     height: calc(460px + 6em);
@@ -1682,7 +1684,7 @@ input[type="button"],
     position: absolute;
     top: 0;
     width: 1px;
-    z-index: 0; }
+    z-index: 0; } */
   #footer a {
     color: #ffffff; }
   #footer strong, #footer b {
@@ -1738,7 +1740,7 @@ input[type="button"],
   padding: 6em 0 5em 0;
   position: relative;
   z-index: 1; }
-  #main:before {
+  /* #main:before {
     background: rgba(224, 224, 224, 0.75);
     content: '';
     height: 100%;
@@ -1746,7 +1748,7 @@ input[type="button"],
     position: absolute;
     top: 0;
     width: 1px;
-    z-index: -1; }
+    z-index: -1; } */
   #main header.major,
   #main footer.major {
     background: #ffffff; }
