--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,32 +1,139 @@
-<div id="main">
-    <section id="tabs" class=" row justify-content-xs-center">
-        <div class="container col-xs-2">
-            <nav>
-                <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                    <a class="nav-item nav-link active" id="nav-intern-tab" data-toggle="tab" href="#nav-intern"
-                        role="tab" aria-controls="nav-intern" aria-selected="true" style="color: #741eb3;">Jobs
-                        and Internships</a>
-                    <a class="nav-item nav-link" id="nav-thons-tab" data-toggle="tab" href="#nav-thons" role="tab"
-                        aria-controls="nav-thons" aria-selected="false" style="color: #741eb3;">Hackathons,
-                        Makerthons & Projects</a>
-                    <a class="nav-item nav-link" id="nav-eca-tab" data-toggle="tab" href="#nav-eca" role="tab"
-                        aria-controls="nav-eca" aria-selected="false" style="color: #741eb3;">Extra-Curricular
-                        Activities</a>
-                </div>
-            </nav>
+<!-- Wrapper -->
+<div id="wrapper">
+    <!-- Main -->
+    <div id="main">
 
-            <div class="tab-content  " id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-intern" role="tabpanel" aria-labelledby="nav-intern-tab">
-                    <app-jobs-tab></app-jobs-tab>
-                </div>
-                <div class="tab-pane fade" id="nav-thons" role="tabpanel" aria-labelledby="nav-thons-tab">
-                    <app-projects-tab></app-projects-tab>
-                </div>
+        <!-- One -->
+        <section id="one">
+            <div class="image main" data-position="center">
+                <img src="assets/images/banner-dawn.jpg" alt="" />
+            </div>
+            <div class="container">
+                <header class="major">
+                    <p>Hey, I'm Dawn Lin</p>
+                </header>
+                <p>
+                    A software engineer doing good in this world through my work in tech.
+                </p>
+            </div>
+        </section>
 
-                <div class="tab-pane fade" id="nav-eca" role="tabpanel" aria-labelledby="nav-eca-tab">
-                    <app-clubs-tab></app-clubs-tab>
+        <!-- Two -->
+        <section id="two">
+            <div class="container tech-skills">
+                <h3>Software Development</h3>
+                <h5>A partial list of the tech tools I am well versed in</h5>
+                <p class="skills-list">Front End</p>
+                <ul class="feature-icons frontend">
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-angular fa-stack-1x fa-inverse"></i>
+                        </span>
+                        Angular (JS, Typescript)
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-react fa-stack-1x fa-inverse"></i>
+                        </span>
+                        React (JS, Typescript)
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-ice-cream fa-stack-1x fa-inverse"></i>
+                        </span>
+                        Vanilla HTML/CSS/JS
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-book fa-stack-1x fa-inverse"></i>
+                        </span>
+                        Mapbox, High charts, Full Calendar, & other libraries
+                    </li>
+                    
+                </ul>
+                <p class="skills-list">Full Stack & Back End</p>
+                <ul class="feature-icons backend">
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-code fa-stack-1x fa-inverse"></i>
+                        </span>
+                        C#/.NET
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-node fa-stack-1x fa-inverse"></i>
+                        </span>
+                        NodeJS (Apollo/GraphQL/Express)
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-java fa-stack-1x fa-inverse"></i>
+                        </span>
+                        JavaEE
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-1x">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-database fa-stack-1x fa-inverse"></i>
+                        </span>
+                        SQL & NoSQL databases
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        
+        <section id="three">
+            <div class="container">
+                <h3>Career to Date</h3>
+                <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
+                    Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+                <div class="features">
+                    <article>
+                        <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                        <div class="inner">
+                            <h4>Possibly broke spacetime</h4>
+                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
+                                integer adipiscing ornare amet.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                        <div class="inner">
+                            <h4>Terraformed a small moon</h4>
+                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
+                                integer adipiscing ornare amet.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                        <div class="inner">
+                            <h4>Snapped dark matter in the wild</h4>
+                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
+                                integer adipiscing ornare amet.</p>
+                        </div>
+                    </article>
                 </div>
             </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <ul class="copyright">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
         </div>
     </section>
+
 </div>
