--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,20 @@
-<div id="header">
-    <img src="assets/images/headshot-edited-square.jpg" class="img-fluid" style="border-radius: 50%; width: 20rem" />
-    <h1>Dawn Lin</h1>
-    <p>Software Engineer // Java Lover </p>
-</div>
+<section id="header">
+    
+    <header>
+        <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+        <h1 id="logo"><a href="#">Lin Dawn</a></h1>
+        <p>"Tech person"</p>
+    </header>
+    <nav id="nav">
+        <ul>
+            <li><a href="#one" class="active">About</a></li>
+            <li><a href="#two">Software Dev</a></li>
+            <li><a href="#three">Job Experiences</a></li>
+            <li><a href="#four">Contact</a></li>
+            <li><a href="#" class="icon brands fa-github"> My Github</a></li>
+        </ul>
+    </nav>
+    <footer>
+       
+    </footer>
+</section>
