--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,3 +1,15 @@
-.thumbnail{
-    margin-top: 90px;
+p.skills-list {
+    margin: 1em 0;
 }
+div.tech-skills ul.feature-icons li{
+    padding-left: 0;
+}
+
+ul.frontend li .fas.fa-circle.fa-stack-2x{
+    color: #ffc06e;
+}
+
+ul.backend li .fas.fa-circle.fa-stack-2x{
+    color: #c085ff;
+}
+
