reskin and content update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <header-component></header-component>
-<app-main></app-main>
+<div id="wrapper">
+    <app-main></app-main>
+    <app-jobs></app-jobs>
+</div>
