--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,139 +1,135 @@
 <!-- Wrapper -->
-<div id="wrapper">
-    <!-- Main -->
-    <div id="main">
 
-        <!-- One -->
-        <section id="one">
-            <div class="image main" data-position="center">
-                <img src="assets/images/banner-dawn.jpg" alt="" />
-            </div>
-            <div class="container">
-                <header class="major">
-                    <p>Hey, I'm Dawn Lin</p>
-                </header>
-                <p>
-                    A software engineer doing good in this world through my work in tech.
-                </p>
-            </div>
-        </section>
+<!-- Main -->
+<div id="main">
 
-        <!-- Two -->
-        <section id="two">
-            <div class="container tech-skills">
-                <h3>Software Development</h3>
-                <h5>A partial list of the tech tools I am well versed in</h5>
-                <p class="skills-list">Front End</p>
-                <ul class="feature-icons frontend">
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-angular fa-stack-1x fa-inverse"></i>
-                        </span>
-                        Angular (JS, Typescript)
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-react fa-stack-1x fa-inverse"></i>
-                        </span>
-                        React (JS, Typescript)
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fas fa-ice-cream fa-stack-1x fa-inverse"></i>
-                        </span>
-                        Vanilla HTML/CSS/JS
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fas fa-book fa-stack-1x fa-inverse"></i>
-                        </span>
-                        Mapbox, High charts, Full Calendar, & other libraries
-                    </li>
-                    
-                </ul>
-                <p class="skills-list">Full Stack & Back End</p>
-                <ul class="feature-icons backend">
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fas fa-code fa-stack-1x fa-inverse"></i>
-                        </span>
-                        C#/.NET
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-node fa-stack-1x fa-inverse"></i>
-                        </span>
-                        NodeJS (Apollo/GraphQL/Express)
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-java fa-stack-1x fa-inverse"></i>
-                        </span>
-                        JavaEE
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-1x">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fas fa-database fa-stack-1x fa-inverse"></i>
-                        </span>
-                        SQL & NoSQL databases
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        
-        <section id="three">
-            <div class="container">
-                <h3>Career to Date</h3>
-                <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
-                    Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-                <div class="features">
-                    <article>
-                        <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h4>Possibly broke spacetime</h4>
-                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
-                                integer adipiscing ornare amet.</p>
-                        </div>
-                    </article>
-                    <article>
-                        <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h4>Terraformed a small moon</h4>
-                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
-                                integer adipiscing ornare amet.</p>
-                        </div>
-                    </article>
-                    <article>
-                        <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-                        <div class="inner">
-                            <h4>Snapped dark matter in the wild</h4>
-                            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus
-                                integer adipiscing ornare amet.</p>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-    </div>
-
-    <!-- Footer -->
-    <section id="footer">
+    <!-- One -->
+    <section id="one">
+        <div class="image main" data-position="center">
+            <img src="assets/images/banner-dawn.jpg" alt="" />
+        </div>
         <div class="container">
-            <ul class="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
+            <header class="major">
+                <h1>Hey, I'm Dawn Lin</h1>
+            </header>
+            <p>
+                A software engineer doing good in this world through my work in tech.
+            </p>
         </div>
     </section>
 
-</div>
+    <!-- Two -->
+    <section id="two">
+        <div class="container tech-skills">
+            <h3>Software Development</h3>
+            <h5>A partial list of the tech tools I am well versed in</h5>
+            <p class="skills-list">Front End</p>
+            <ul class="feature-icons frontend">
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-angular fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Angular (JS, Typescript)
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-react fa-stack-1x fa-inverse"></i>
+                    </span>
+                    React (JS, Typescript)
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fas fa-ice-cream fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Vanilla HTML/CSS/JS
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fas fa-book fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Mapbox, High charts, Full Calendar, & other libraries
+                </li>
+
+            </ul>
+            <p class="skills-list">Full Stack & Back End</p>
+            <ul class="feature-icons backend">
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-android fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Android Studio
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fas fa-code fa-stack-1x fa-inverse"></i>
+                    </span>
+                    C#/.NET
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-node fa-stack-1x fa-inverse"></i>
+                    </span>
+                    NodeJS (Apollo/GraphQL/Express)
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-java fa-stack-1x fa-inverse"></i>
+                    </span>
+                    JavaEE
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fas fa-database fa-stack-1x fa-inverse"></i>
+                    </span>
+                    SQL/NoSQL databases (MySQL, MongoDB, Postgres)
+                </li>
+            </ul>
+            <p class="skills-list" >Other Tools and Environments</p>
+            <ul class="feature-icons envir">
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-raspberry-pi fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Raspberry Pi
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-ubuntu fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Ubuntu
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-docker fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Docker
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-figma fa-stack-1x fa-inverse"></i>
+                    </span>
+                    Figma
+                </li>
+                <li>
+                    <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fas fa-photo-video fa-stack-1x fa-inverse"></i>
+                    </span>
+                    GIMP/Lightworks editing
+                </li>
+            </ul>
+        </div>
+    </section>
