--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
     
     <header>
         <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-        <h1 id="logo"><a href="#">Lin Dawn</a></h1>
-        <p>"Tech person"</p>
+        <h1 id="logo"><a href="#">Dawn Lin</a></h1>
+        <p><i>"Tech person"</i></p>
     </header>
     <nav id="nav">
         <ul>
@@ -11,7 +11,7 @@
             <li><a href="#two">Software Dev</a></li>
             <li><a href="#three">Job Experiences</a></li>
             <li><a href="#four">Contact</a></li>
-            <li><a href="#" class="icon brands fa-github"> My Github</a></li>
+            <li><a href="https://github.com/lindawn" class="icon brands fa-github"> My Github</a></li>
         </ul>
     </nav>
     <footer>
