replace image with remote source

--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -4,7 +4,7 @@
         <p>Stepping stones I've hopped across so far</p>
         <div class="features">
             <article>
-                <a href="#" class="image"><img src="/assets/images/ackcio.jpg" alt="" /></a>
+                <a href="#" class="image"><img src="https://images.glints.com/unsafe/1200x0/glints-dashboard.s3.amazonaws.com/company-logo/320a4e0223005f505a8470d84efce2a4.jpg" alt="" /></a>
                 <div class="inner">
                     <h4>Ackcio, Software Engineer</h4>
                     <h6>(Apr - Dec 2020)</h6>
@@ -67,7 +67,7 @@
                 </div>
             </article>
             <article>
-                <a href="#" class="image"><img src="/assets/images/tetsuyu.png" alt="" /></a>
+                <a href="#" class="image"><img src="https://media-exp1.licdn.com/dms/image/C560BAQE9HwugN9zQhA/company-logo_200_200/0/1595903133714?e=2159024400&v=beta&t=rUVusM3PYL501DXcZNcfJBnp4uxfVLFCWOE2uwwLF_A" alt="" /></a>
                 <div class="inner">
                     <h4>Tetsuyu Healthcare </h4>
                     <h6>Summer 2019</h6>
