added projects tab

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,8 @@
             <li><a href="#one" class="active">About</a></li>
             <li><a href="#two">Software Dev</a></li>
             <li><a href="#three">Job Experiences</a></li>
-            <li><a href="#four">Contact</a></li>
+            <li><a href="#four">Projects</a></li>
+            <li><a href="#five">Contact</a></li>
             <li><a href="https://github.com/lindawn" class="icon brands fa-github"> My Github</a></li>
         </ul>
     </nav>
