--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <div id="wrapper">
     <app-main></app-main>
     <app-jobs></app-jobs>
+    <app-projects></app-projects>
+    <app-contact></app-contact>
 </div>
