--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,10 +1,12 @@
 <section id="three">
     <div class="container">
         <h3>Career to Date</h3>
-        <p>Stepping stones I've hopped across so far</p>
+        <p>The stepping stones that have brought me to where I am today</p>
         <div class="features">
             <article>
-                <a href="#" class="image"><img src="https://images.glints.com/unsafe/1200x0/glints-dashboard.s3.amazonaws.com/company-logo/320a4e0223005f505a8470d84efce2a4.jpg" alt="" /></a>
+                <a href="#" class="image"><img
+                        src="https://images.glints.com/unsafe/1200x0/glints-dashboard.s3.amazonaws.com/company-logo/320a4e0223005f505a8470d84efce2a4.jpg"
+                        alt="" /></a>
                 <div class="inner">
                     <h4>Ackcio, Software Engineer</h4>
                     <h6>(Apr - Dec 2020)</h6>
@@ -67,7 +69,9 @@
                 </div>
             </article>
             <article>
-                <a href="#" class="image"><img src="https://media-exp1.licdn.com/dms/image/C560BAQE9HwugN9zQhA/company-logo_200_200/0/1595903133714?e=2159024400&v=beta&t=rUVusM3PYL501DXcZNcfJBnp4uxfVLFCWOE2uwwLF_A" alt="" /></a>
+                <a href="#" class="image"><img
+                        src="https://media-exp1.licdn.com/dms/image/C560BAQE9HwugN9zQhA/company-logo_200_200/0/1595903133714?e=2159024400&v=beta&t=rUVusM3PYL501DXcZNcfJBnp4uxfVLFCWOE2uwwLF_A"
+                        alt="" /></a>
                 <div class="inner">
                     <h4>Tetsuyu Healthcare </h4>
                     <h6>Summer 2019</h6>
@@ -88,62 +92,23 @@
                     </p>
                 </div>
             </article>
+
+            <article id="bottomBorder">
+                <a href="#" class="image"><img src="" alt="" /></a>
+                <div class="inner">
+                    <h4>Non-tech jobs</h4>
+                    <p>In addition to my tech career, I have years of customer service experience, including selling
+                        school
+                        uniforms, service and entertainment staff at a specialist whiskey bar, service at a japanese
+                        restaurant,
+                        cashier jobs at cafes, and a professional fundraiser for the Singapore Bone Marrow Donor
+                        Program.
+                    </p>
+                    <p>Recently, I have taken up tutoring Math at the pre-university level, in which I guide my students
+                        to
+                        perform by gaining a deeper understanding of the subject. </p>
+                </div>
+            </article>
         </div>
-
-    </div>
-    <div class="container">
-        <h4>The Side Hustles</h4>
-        <p>In addition to my tech career, I have years of customer service experience, including selling school
-            uniforms, service and entertainment staff at a specialist whiskey bar, service at a japanese restaurant,
-            cashier jobs at cafes, and a professional fundraiser for the Singapore Bone Marrow Donor Program.</p>
-        <p>Recently, I have taken up tutoring Math at the pre-university level, in which I guide my students to
-            perform by gaining a deeper understanding of the subject. </p>
-    </div>
-</section>
-
-
-
-<section id="four">
-    <div class="container">
-        <h3>Contact Me</h3>
-        <ul class="contact">
-            <li>
-                <a href="mailto:tan.lin.dawn@gmail.com" data-toggle="tooltip" title="Email">
-                    <span class="fa-stack fa-1x">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="https://t.me/dawnbun" data-toggle="tooltip" title="Telegram">
-                    <span class="fa-stack fa-1x">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-telegram-plane fa-stack-1x fa-inverse"></i>
-                    </span></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/dawn-lin-b4b28b176" data-toggle="tooltip" title="LinkedIn">
-                    <span class="fa-stack fa-1x">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
-                    </span></a>
-            </li>
-            <li>
-                <a href="https://join.skype.com/invite/gZzEZadvmQSV" data-toggle="tooltip" title="Skype">
-                    <span class="fa-stack fa-1x">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-skype fa-stack-1x fa-inverse"></i>
-                    </span></a>
-            </li>
-            <li>
-                <a href="https://github.com/lindawn" data-toggle="tooltip" title="Github" >
-                    <span class="fa-stack fa-1x">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                    </span></a>
-            </li>
-         
-        </ul>
     </div>
 </section>
